--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hola Mundo</title>
 </head>
 <body>
-<h1>Hola Mundo</h1>
+<h1>Hola Mundo, es un buen día para conquistar el mundo</h1>
 </body>
 </html>
